manifests/system/calico/gatewayclass.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: traefik-2
  labels:
    traefik-gateway: traefik-2 
spec:
  controllerName: traefik.io/gateway-controller
