manifests/system/calico/traefik.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: traefik-2
  name: traefik-2
  namespace: traefik
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: traefik-2
  template:
    metadata:
      annotations:
        prometheus.io/path: /metrics
        prometheus.io/port: "9100"
        prometheus.io/scrape: "true"
      labels:
        app.kubernetes.io/name: traefik-2
    spec:
      automountServiceAccountToken: true
      containers:
      - args:
        - --entryPoints.metrics.address=:9100/tcp
        - --entryPoints.traefik.address=:8888/tcp
        - --entryPoints.web.address=:8333/tcp
        - --entryPoints.websecure.address=:8553/tcp
        - --api.dashboard=false
        - --ping=true
        - --metrics.prometheus=true
        - --metrics.prometheus.entrypoint=metrics
        - --providers.kubernetescrd
        - --providers.kubernetescrd.allowEmptyServices=true
        - --providers.kubernetesingress
        - --providers.kubernetesingress.allowEmptyServices=true
        - --providers.kubernetesingress.ingressendpoint.publishedservice=traefik/traefik-2
        - --providers.kubernetesgateway
        - --providers.kubernetesgateway.statusaddress.service.name=traefik-2
        - --providers.kubernetesgateway.statusaddress.service.namespace=traefik
        - --providers.kubernetesgateway.labelselector=traefik-gateway=traefik-2
          #- --providers.kubernetesGateway.controllerName=traefik.io/gateway-controller/traefik-2
        - --entryPoints.websecure.http.tls=true
        - --log.level=INFO
        - --accesslog=true
        - --accesslog.fields.defaultmode=keep
        - --accesslog.fields.headers.defaultmode=drop
        image: docker.io/traefik:v3.6.0
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /ping
            port: 8888
            scheme: HTTP
          initialDelaySeconds: 2
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 2
        name: traefik
        ports:
        - containerPort: 9100
          name: metrics
          protocol: TCP
        - containerPort: 8888
          name: traefik
          protocol: TCP
        - containerPort: 8333
          name: web
          protocol: TCP
        - containerPort: 8553
          name: websecure
          protocol: TCP
        readinessProbe:
          failureThreshold: 1
          httpGet:
            path: /ping
            port: 8888
            scheme: HTTP
          initialDelaySeconds: 2
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 2
        resources: {}
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /data
          name: data
        - mountPath: /tmp
          name: tmp
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        runAsGroup: 65532
        runAsNonRoot: true
        runAsUser: 65532
      serviceAccount: traefik
      serviceAccountName: traefik
      terminationGracePeriodSeconds: 60
      volumes:
      - emptyDir: {}
        name: data
      - emptyDir: {}
        name: tmp
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    metallb.io/ip-allocated-from-pool: first-pool
  labels:
    app.kubernetes.io/name: traefik-2
  name: traefik-2
  namespace: traefik
spec:
  allocateLoadBalancerNodePorts: true
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ports:
  - name: web
    nodePort: 30001
    port: 80
    protocol: TCP
    targetPort: web
  - name: websecure
    nodePort: 31198
    port: 443
    protocol: TCP
    targetPort: websecure
  selector:
    app.kubernetes.io/name: traefik-2
  sessionAffinity: None
  type: LoadBalancer
